--- a/Starter/index.html
+++ b/Starter/index.html
@@ -41,6 +41,22 @@
         </div>
     </nav>
 
+    <section id="showcase" class="d-flex justify-content-center align-items-center">
+        <div class="overlay">
+
+        </div>
+        <div id="header" class="container text-white text-center">
+            <h3 class="display-5 mb-0">MODERN CAMPING</h3>
+            <h1 class="display-1">AURORA GROVE</h1>
+            <p class="lead d-none d-md-block">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam atque quis ad
+            </p>
+            <button id="book" class="btn btn-lg btn-primary px-5">
+                BOOK NOW
+            </button>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
