--- a/Starter/index.html
+++ b/Starter/index.html
@@ -42,7 +42,7 @@
     </nav>
 
     <section id="showcase" class="d-flex justify-content-center align-items-center">
-        <div class="overlay">
+        <div id="overlay">
 
         </div>
         <div id="header" class="container text-white text-center">
