--- a/Starter/index.html
+++ b/Starter/index.html
@@ -57,6 +57,35 @@
         </div>
     </section>
 
+    <section id="id">
+        <div class="container text-center mt-5">
+            <h2>YOU SHOW UP, WE PITCH THE TENT</h2>
+            <div class="row">
+                <div class="col-md-4 p-3">
+                    <img src="images/icons/tent.png" alt="" class="img-fluid d-none d-md-inline">
+                    <h3>Amenities You Want</h3>
+                    <p class="lead">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo provident quia debitis similique recusandae aperiam fugiat, eos labore.
+                    </p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img src="images/icons/campfire.png" alt="" class="img-fluid d-none d-md-inline">
+                    <h3>Amenities You Want</h3>
+                    <p class="lead">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo provident quia debitis similique recusandae aperiam fugiat, eos labore.
+                    </p>
+                </div>
+                <div class="col-md-4 p-3">
+                    <img src="images/icons/nature.png" alt="" class="img-fluid d-none d-md-inline">
+                    <h3>Amenities You Want</h3>
+                    <p class="lead">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo provident quia debitis similique recusandae aperiam fugiat, eos labore.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
