--- a/Starter/index.html
+++ b/Starter/index.html
@@ -86,6 +86,34 @@
         </div>
     </section>
 
+    <section id="id2">
+        <div class="container text-center mt-2 p-3">
+            <h2>WE'VE CREATED A CAMPING EXPERIENCE THAT'S TURN-KEY AND HASSLE FREE</h2>
+            <div class="row m-2">
+                <div class="col-md-6 p-3">
+                    <div class="card">
+                        <img src="images/winter.png" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h2 class="card-title text-primary">EXPERIENCE</h2>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo provident quia debitis similique recusandae aperiam fugiat, eos labore.</p>
+                            <a href="#" class="btn btn-lg btn-outline-primary">Go Somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 p-3">
+                    <div class="card">
+                        <img src="images/dogs.png" alt="" class="card-img-top">
+                        <div class="card-body">
+                            <h2 class="card-title text-primary">EXPLORE</h2>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo provident quia debitis similique recusandae aperiam fugiat, eos labore.</p>
+                            <a href="#" class="btn btn-lg btn-outline-primary">Go Somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
