--- a/Starter/index.html
+++ b/Starter/index.html
@@ -59,7 +59,7 @@
 
     <section id="id">
         <div class="container text-center mt-5">
-            <h2>YOU SHOW UP, WE PITCH THE TENT</h2>
+            <h3>YOU SHOW UP, WE PITCH THE TENT</h3>
             <div class="row">
                 <div class="col-md-4 p-3">
                     <img src="images/icons/tent.png" alt="" class="img-fluid d-none d-md-inline">
@@ -88,7 +88,7 @@
 
     <section id="id2">
         <div class="container text-center mt-2 p-3">
-            <h2>WE'VE CREATED A CAMPING EXPERIENCE THAT'S TURN-KEY AND HASSLE FREE</h2>
+            <h3>WE'VE CREATED A CAMPING EXPERIENCE THAT'S TURN-KEY AND HASSLE FREE</h3>
             <div class="row m-2">
                 <div class="col-md-6 p-3">
                     <div class="card">
@@ -109,6 +109,41 @@
                             <a href="#" class="btn btn-lg btn-outline-primary">Go Somewhere</a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="quotes">
+        <div class="container text-center mt-4">
+            <h3>WHAT OUR HAPPY CAMPERS ARE SAYING</h3>
+            <div class="row">
+                <div class="col-md-4 my-2">
+                    <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+                    <blockquote class="blockquote">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                        </p>
+                        <footer class="blockquote-footer">Mark Twain</footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4 my-2">
+                    <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+                    <blockquote class="blockquote">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                        </p>
+                        <footer class="blockquote-footer">Mark Twain</footer>
+                    </blockquote>
+                </div>
+                <div class="col-md-4 my-2">
+                    <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+                    <blockquote class="blockquote">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                        </p>
+                        <footer class="blockquote-footer">Mark Twain</footer>
+                    </blockquote>
                 </div>
             </div>
         </div>
