Added social media section

--- a/Starter/index.html
+++ b/Starter/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section>
-        <div class="container my-5">
+        <div class="container mt-5">
             <div class="row">
                 <div class="col-lg-7 mb-4">
                     <div id="mainCarousel" class="carousel slide" data-ride="carousel">
@@ -187,6 +187,53 @@
                     <a href="#"> See for yourself <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container text-center mt-5">
+            <h3>WHAT OTHERS ARE SAYING</h3>
+            <h5 class="text-primary">#AURORAGROVE</h5>
+            <div class="row mt-4">
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social1.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social2.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social3.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social4.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social5.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social6.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social7.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-6 col-lg-3 mb-4">
+                    <img src="images/gallery/social8.png" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container text-center mt-4">
+            <i class="fas fa-quote-left fa-2x text-primary mb-3"></i>
+            <blockquote class="blockquote">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti neque eaque similique. Quis, soluta porro modi similique accusantium atque quia quaerat vel?
+                </p>
+                <footer class="blockquote-footer">Mark Twain</footer>
+            </blockquote>
         </div>
     </section>
 
