--- a/Starter/index.html
+++ b/Starter/index.html
@@ -23,16 +23,16 @@
         <div class="collapse navbar-collapse" id="mainNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Home</a>
+                    <a href="#showcase" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#icons" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Explore</a>
+                    <a href="#explore" class="nav-link">Explore</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#newsletter" class="nav-link">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Book</a>
@@ -51,13 +51,13 @@
             <p class="lead d-none d-md-block">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quibusdam atque quis ad
             </p>
-            <button id="book" class="btn btn-lg btn-primary px-5">
+            <button id="book" class="btn btn-lg btn-primary px-5" data-toggle="modal" data-target="#bookingModal">
                 BOOK NOW
             </button>
         </div>
     </section>
 
-    <section id="id">
+    <section id="icons">
         <div class="container text-center mt-5">
             <h3>YOU SHOW UP, WE PITCH THE TENT</h3>
             <div class="row">
@@ -86,7 +86,7 @@
         </div>
     </section>
 
-    <section id="id2">
+    <section id="explore">
         <div class="container text-center mt-2 p-3">
             <h3>WE'VE CREATED A CAMPING EXPERIENCE THAT'S TURN-KEY AND HASSLE FREE</h3>
             <div class="row m-2">
@@ -236,6 +236,92 @@
             </blockquote>
         </div>
     </section>
+
+    <section id="newsletter" class="bg-dark">
+        <div class="container text-white text-center py-5">
+            <p class="lead">JOIN OUR NEWSLETTER FOR DEALS, UPDATES AND OFFERS</p>
+            <div class="row justify-content-center">
+                <div class="col-10 col-sm-8 col-md-6 col-lg-4">
+                    <form action="" class="form-inline">
+                        <div class="input-group">
+                            <input type="text" name="" id="" class="form-control" placeholder="Your Email">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary">Join Now</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>                
+            </div>
+        </div>
+    </section>
+    
+    <section id="footer" class="bg-secondary p-3">
+        <ul class="nav text-center justify-content-center flex-column flex-sm-row">
+            <li class="nav-item">
+                <a href="#" class="nav-link text-white">FAQ</a>
+            </li>
+            <li class="nav-item">
+                <a href="#explore" class="nav-link text-white">EXPERIENCE</a>
+            </li>
+            <li class="nav-item">
+                <a href="#explore" class="nav-link text-white">EXPLORE</a>
+            </li>
+            <li class="nav-item">
+                <a href="#newsletter" class="nav-link text-white">CONTACT</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link text-white" data-toggle="modal" data-target="#bookingModal">BOOK NOW</a>
+            </li>
+        </ul>
+    </section>
+
+    <div id="bookingModal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">New booking</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">Please fill out the form below and will get back to you as soon as possible.</p>
+                    <form action="">
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="text" name="email" id="" class="form-control" id="email" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="adults"># of Adults</label>
+                            <select class="form-control" name="adults" id="adults">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="children"># of Children</label>
+                            <select class="form-control" name="children" id="children">
+                                <option value="1">1</option>
+                                <option value="1">2</option>
+                                <option value="1">3</option>
+                                <option value="1">4</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="requests">Additional Requests</label>
+                            <textarea name="requests" id="requests" rows="3" class="form-control"></textarea>
+                        </div>
+                    </form>                    
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary">Submit Request</button>
+                    <button class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>            
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
