--- a/MuseumOfCandy/index.html
+++ b/MuseumOfCandy/index.html
@@ -36,7 +36,26 @@
           </li>
         </ul>
       </div>
-    </nav>    
+    </nav>
+
+    <section class="container-fluid">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div id="heading-group" class="text-white text-center d-none d-lg-block mt-5">
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1 class="">MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>          
+        </div>
+        <div class="col-lg-6 px-0">
+          <img src="imgs/hand2.png" class="img-fluid" alt="">
+        </div>
+      </div>
+    </section>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
