Worked in the next section of the page, second row

--- a/MuseumOfCandy/index.html
+++ b/MuseumOfCandy/index.html
@@ -55,6 +55,44 @@
       </div>
     </section>
 
+    <section class="container-fluid">
+      <div class="row align-items-center content">
+        <div class="col-md-6 px-0 order-2 order-md-1">
+          <img src="imgs/milk.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img class="d-none d-lg-inline" src="imgs/lolli_icon.png" alt="">
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laudantium voluptates vel porro dignissimos ipsa! Perferendis, maiores quo! Aut, enim voluptates necessitatibus adipisci tempora ea reprehenderit totam nostrum ipsum nulla.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laudantium voluptates vel porro dignissimos ipsa! Perferendis, maiores quo! Aut, enim voluptates necessitatibus adipisci tempora ea reprehenderit totam nostrum ipsum nulla.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="row align-items-center content">
+        <div class="col-md-6 px-0 order-2 order-md-1">
+          <img src="imgs/milk.png" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 blurb">
+              <h2>MUSEUM OF CANDY</h2>
+              <img class="d-none d-lg-inline" src="imgs/lolli_icon.png" alt="">
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laudantium voluptates vel porro dignissimos ipsa! Perferendis, maiores quo! Aut, enim voluptates necessitatibus adipisci tempora ea reprehenderit totam nostrum ipsum nulla.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laudantium voluptates vel porro dignissimos ipsa! Perferendis, maiores quo! Aut, enim voluptates necessitatibus adipisci tempora ea reprehenderit totam nostrum ipsum nulla.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
